--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
-    "ts-node-dev": "^1.1.8"
+    "reflect-metadata": "^0.1.13",
+    "ts-node-dev": "^1.1.8",
+    "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
