--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,25 @@
 {
     "env": {
-        "es2021": true,
-        "node": true
+      "es2021": true,
+      "node": true,
+      "jest": true
     },
-    "extends": [
-        "standard"
-    ],
+    
+    "extends": ["standard"],
+  
     "parser": "@typescript-eslint/parser",
+  
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+      "ecmaVersion": 12,
+      "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+  
+    "plugins": ["@typescript-eslint"],
+  
     "rules": {
-        "no-useless-constructor":"off"
+      "no-undef":"off",
+      "no-useless-constructor":"off",
+      "camelcase":"off",
+      "no-constant-condition":"off"
     }
-}
+  }
