--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+    "test": "jest --passWithNoTests --noStackTrace --setupFiles dotenv/config --runInBand",
+    "test:c": "jest --clearCache",
+    "test:v": "jest --passWithNoTests"
   },
   "license": "MIT",
   "dependencies": {
@@ -19,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.0",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.0.1",
@@ -26,6 +30,8 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.6.4"
   }
